--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user) do |form| %>
+<%= simple_form_for user do |form| %>
   <% if user.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -28,7 +28,7 @@
 
   <div>
     <%= form.label :preferred_timezone, style: "display: block" %>
-    <%= form.text_field :preferred_timezone %>
+    <%= form.input :preferred_timezone, as: :time_zone, label: false %>
   </div>
 
   <div>
